# infidraw

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  ADMIN.md  CHANGELOG.md  INFRA.md  README.md  RECOMMENDATIONS.md  START.md  bake-speed-test.ps1  bake.ps1  build.ps1  buildkitd.toml  docker-bake.hcl  docker-compose.yml  package-lock.json  package.json  up.ps1
.cursor/plans/: rust-сервисы_и_образы_-rust_a67bc398.plan.md
docs/: OPTIMIZE-RESPONSE-SIZE.md  PERF-ROADMAP.md  REMOTE-BUILD-PERF.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: Admin.tsx  App.tsx  index.css  main.tsx  types.ts
k8s/: cleanup-README.md  cleanup-cronjob-simple.yaml  cleanup-cronjob.yaml  migrate-bbox-job-simple.yaml  migrate-bbox-job.yaml
nginx/: nginx.conf
scripts/: admin-stats.ps1  backfill-tile-events.sql  bake.ps1  build-tile-base.ps1  cleanup-all.ps1  cleanup-old.ps1  clear-database.ps1  diagnose-502.ps1  generate-lockfiles.ps1  lint-fix-all.ps1  measure-api-responses.ps1  migrate-bbox.ps1  migrate-bbox.sql  test-all-services.ps1  test-all-with-coverage.ps1  test-coverage-docker.ps1  test-rust-services.ps1
services/.rust/admin-service/: Cargo.toml  Dockerfile
services/.rust/admin-service/src/: main.rs
services/.rust/api-gateway/: Cargo.toml  Dockerfile
services/.rust/api-gateway/src/: main.rs
services/.rust/event-store/: Cargo.toml  Dockerfile
services/.rust/event-store/src/: main.rs
services/.rust/metrics-service/: Cargo.toml  Dockerfile
services/.rust/metrics-service/src/: main.rs
services/.rust/realtime-service/: Cargo.toml  Dockerfile
services/.rust/realtime-service/src/: main.rs
services/.rust/snapshot-worker/: Cargo.toml  Dockerfile
services/.rust/snapshot-worker/src/: main.rs
services/.rust/tile-service/: Cargo.toml  Dockerfile
services/.rust/tile-service/src/: main.rs
services/admin-service/: Dockerfile  jest.setup.js  package-lock.json  package.json
services/admin-service/coverage/: clover.xml  coverage-final.json  lcov.info
services/admin-service/coverage/lcov-report/: index.html  index.ts.html
services/admin-service/src/: index.ts
services/admin-service/src/__tests__/: index.test.ts
services/api-gateway/: jest.config.js  jest.setup.js  package-lock.json  package.json
services/api-gateway/coverage/: clover.xml  coverage-final.json  lcov.info
services/api-gateway/coverage/lcov-report/: index.html  index.ts.html
services/api-gateway/src/: index.ts
services/api-gateway/src/__tests__/: index.test.ts
services/event-store/: .dockerignore  .eslintrc.cjs  Dockerfile  jest.setup.js  package-lock.json  package.json
services/event-store/coverage/: clover.xml  coverage-final.json  lcov.info
services/event-store/src/: db.ts  index.ts  types.ts
services/metrics-service/: Dockerfile  jest.setup.js  package-lock.json  package.json
services/metrics-service/coverage/: clover.xml  coverage-final.json  lcov.info
services/metrics-service/src/: index.ts
services/realtime-service/: Dockerfile  jest.setup.js  package-lock.json  package.json
services/realtime-service/coverage/: clover.xml  coverage-final.json  lcov.info
services/realtime-service/src/: index.ts  types.ts
services/snapshot-worker/: .dockerignore  Dockerfile  go.mod  main.go
services/tile-service/: Dockerfile  Dockerfile.base  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
services/tile-service/src/: index.ts  types.ts
shared/types/: stroke.ts
terraform/: .gitignore  README.md  frontend.tf  main.tf  minio.tf  nginx.conf  nginx.tf  outputs.tf  postgres.tf  redis.tf  services.tf  terraform.tfvars.example  variables.tf
(+10 files in other folders)
