[package]
name = "event-store"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "macros", "query"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json"] }
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
tower-http = { version = "0.4", features = ["limit"] }
tracing = "0.1"
tower = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
