[package]
name = "metrics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
aws-config = "1.4"
aws-sdk-s3 = "1.54"
aws-credential-types = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
