[package]
name = "realtime-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dotenvy = "0.15"
